Added new notification system, Basic UI HTML (ALRP Style), Added Cop Garages

--- a/[Scripts]/vMenu/config/permissions Grant All.cfg
+++ b/[Scripts]/vMenu/config/permissions Grant All.cfg
@@ -13,18 +13,18 @@ setr vmenu_freeze_time false
 setr vmenu_default_time_hour 11
 setr vmenu_default_time_min 0
 setr vmenu_ingame_minute_duration 5000
-setr vmenu_auto_ban_cheaters true
-setr vmenu_auto_ban_cheaters_ban_message "Retaliation Gaming: You've been banned for Cheating/Glitching/Exploiting/Hacking"
+setr vmenu_auto_ban_cheaters false
+setr vmenu_auto_ban_cheaters_ban_message "You have been automatically banned. If you believe this was done by error, please contact the server owner for support."
 setr vmenu_log_ban_actions true
 setr vmenu_log_kick_actions true
 setr vmenu_outdated_version_notify_players false
 setr vmenu_use_els_compatibility_mode false
 setr vmenu_quit_session_in_rockstar_editor true
-setr vmenu_server_info_message "Retaliation Gaming Discord: https://discord.gg/BHAGpzp"
-setr vmenu_server_info_website_url "www.RetaliationGaming.co.uk"
+setr vmenu_server_info_message "Catraz RP Discord: https://discord.gg/BHAGpzp"
+setr vmenu_server_info_website_url "www.CatrazRP.net"
 setr vmenu_teleport_to_wp_keybind_key 168
 setr vmenu_disable_spawning_as_default_character true
-#add_principal identifier.steam:1100001099953CC group.admin
+add_principal identifier.steam:1100001099953cc group.admin
 
 #############################################
 #        SETTING UP GROUP INHERITANCE       #
@@ -77,6 +77,10 @@ add_ace builtin.admin "vMenu.OnlinePlayers.Teleport" allow
 add_ace builtin.admin "vMenu.OnlinePlayers.TempBan" allow 
 add_ace builtin.admin "vMenu.OnlinePlayers.Unban" allow 
 add_ace builtin.admin "vMenu.OnlinePlayers.Waypoint" allow 
+add_ace builtin.admin "vMenu.PlayerAppearance.Customize" allow 
+add_ace builtin.admin "vMenu.PlayerAppearance.Menu" allow 
+add_ace builtin.admin "vMenu.PlayerAppearance.SpawnNew" allow 
+add_ace builtin.admin "vMenu.PlayerAppearance.SpawnSaved" allow 
 add_ace builtin.admin "vMenu.PlayerOptions.CleanPlayer" allow 
 add_ace builtin.admin "vMenu.PlayerOptions.DryPlayer" allow 
 add_ace builtin.admin "vMenu.PlayerOptions.FastRun" allow 
@@ -174,20 +178,14 @@ add_ace builtin.admin "vMenu.WeatherOptions.Menu" allow
 add_ace builtin.admin "vMenu.WeatherOptions.RandomizeClouds" allow 
 add_ace builtin.admin "vMenu.WeatherOptions.RemoveClouds" allow 
 add_ace builtin.admin "vMenu.WeatherOptions.SetWeather" allow 
-
-
-add_ace builtin.everyone "vMenu.PlayerAppearance.Customize" allow 
-add_ace builtin.everyone "vMenu.PlayerAppearance.Menu" allow 
-add_ace builtin.everyone "vMenu.PlayerAppearance.SpawnNew" allow 
-add_ace builtin.everyone "vMenu.PlayerAppearance.SpawnSaved" allow 
-#add_ace builtin.everyone "vMenu.MiscSettings.DeathNotifs" allow 
-#add_ace builtin.everyone "vMenu.MiscSettings.JoinQuitNotifs" allow 
-#add_ace builtin.everyone "vMenu.MiscSettings.ShowCoordinates" allow 
-#add_ace builtin.everyone "vMenu.MiscSettings.ShowLocation" allow 
+add_ace builtin.everyone "vMenu.MiscSettings.DeathNotifs" allow 
+add_ace builtin.everyone "vMenu.MiscSettings.JoinQuitNotifs" allow 
+add_ace builtin.everyone "vMenu.MiscSettings.ShowCoordinates" allow 
+add_ace builtin.everyone "vMenu.MiscSettings.ShowLocation" allow 
 add_ace builtin.everyone "vMenu.PlayerOptions.CleanPlayer" allow 
 add_ace builtin.everyone "vMenu.PlayerOptions.DryPlayer" allow 
 add_ace builtin.everyone "vMenu.PlayerOptions.Menu" allow 
-#add_ace builtin.everyone "vMenu.PlayerOptions.NeverWanted" allow 
+add_ace builtin.everyone "vMenu.PlayerOptions.NeverWanted" allow 
 add_ace builtin.everyone "vMenu.PlayerOptions.WetPlayer" allow 
 add_ace builtin.everyone "vMenu.VehicleOptions.Doors" allow 
 add_ace builtin.everyone "vMenu.VehicleOptions.Engine" allow 
@@ -195,9 +193,9 @@ add_ace builtin.everyone "vMenu.VehicleOptions.EngineAlwaysOn" allow
 add_ace builtin.everyone "vMenu.VehicleOptions.Flip" allow 
 add_ace builtin.everyone "vMenu.VehicleOptions.Menu" allow 
 add_ace builtin.everyone "vMenu.VehicleOptions.Windows" allow 
-#add_ace builtin.everyone "vMenu.VoiceChat.Enable" allow 
-#add_ace builtin.everyone "vMenu.VoiceChat.Menu" allow 
-#add_ace builtin.everyone "vMenu.VoiceChat.ShowSpeaker" allow 
+add_ace builtin.everyone "vMenu.VoiceChat.Enable" allow 
+add_ace builtin.everyone "vMenu.VoiceChat.Menu" allow 
+add_ace builtin.everyone "vMenu.VoiceChat.ShowSpeaker" allow 
 add_ace resource.vMenu command.sets allow 
 add_principal identifier. builtin.everyone 
 add_principal identifier.steam:1100001099953cc builtin.admin 
